--- a/Home.wiki
+++ b/Home.wiki
@@ -10,7 +10,7 @@ Two moderated mailing-lists are available, one for the users and the other for t
 ** [[writejdf|How to write a DAGuE enabled operation by editing the JDF file directly]]
 ** [[datadistribution|How to write a program that uses a DAGuE enabled operation]] (a.k.a. "what is this data distribution thing?")
 ** [[Profiling%20DAGuE-based%20applications|How to profile DAGuE applications]]
-** [[PINS|How to instrument DAGuE applications with PINS]]
+** [[PINS|How to write a PINS Module to instrument DAGuE applications]]
 ** [[PaRSEC%20Trace%20Tables%20via%20Python|How to use the Python PaRSEC Trace Tables interface]]
 ** [[PaRSEC%20on%20Intel%20Xeon%20Phi%20Native%20Mode.wiki|How to run PaRSEC in Intel Xeon Phi (native mode)]]
 * [[PaRSEC%20based%20tricks%20for%20fun%20or%20profit|Bonus tricks (mainly for developers)]]
