--- a/Home.wiki
+++ b/Home.wiki
@@ -9,6 +9,7 @@ Two moderated mailing-lists are available, one for the users and the other for t
 ** [[compilejdf|How to write a DAGuE enabled operation by using the DAGuE compiler]]
 ** [[writejdf|How to write a DAGuE enabled operation by editing the JDF file directly]]
 ** [[datadistribution|How to write a program that uses a DAGuE enabled operation]] (a.k.a. "what is this data distribution thing?")
+** [[PAPI%20Profiling%20of%20DAGuE%20Applications|PAPI Profiling of DAGuE Applications]]
 ** [[Profiling%20DAGuE-based%20applications|How to profile DAGuE applications]]
 ** [[PINS|How to write a PINS Module to instrument DAGuE applications]]
 ** [[PaRSEC%20Trace%20Tables%20via%20Python|How to use the Python PaRSEC Trace Tables interface]]
